--- a/updates.html
+++ b/updates.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/all.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/updates.css">
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link rel="icon" type="images/x-icon" href="images/logo.png">
@@ -36,7 +36,7 @@
        <span class="tooltip">Roblox Studio</span>
      </li>
      <li>
-       <a href="updates.html">
+       <a href="#">
         <i class="fa-solid fa-list-check"></i>
          <span class="links_name">Updates</span>
        </a>
@@ -54,9 +54,23 @@
     </ul>
   </div>
   <section class="home-section">
-      <div class="text">Home</div>
+      <div class="text">Updates</div>
       <div class="home-area">
         <hr style="border: 2px solid black;">
+        <div class="updates-area">
+            <div class="upd-1">
+                <h1>Update 10/29/2022</h1>
+                <ul>
+                    <li style="margin-left: 20px; margin-bottom: 5px;">Added Updates Area</li>
+                    <li style="margin-left: 20px; margin-bottom: 5px;">Search is working in Roblox Studio</li>
+                    <li style="margin-left: 20px; margin-bottom: 5px;">Fixed some bugs</li>
+                    <li style="margin-left: 20px; margin-bottom: 5px;">Changed Roblox Studio page style</li>
+                    <li style="margin-left: 20px; margin-bottom: 5px;">Added some models</li>
+                    <li style="margin-left: 20px; margin-bottom: 5px;">Updates and home page search bar is disabled</li>
+                    <li style="margin-left: 20px; margin-bottom: 5px;">More Coming Soon</li>
+                </ul>
+            </div>
+        </div>
       </div>
   </section>
   <script>
