--- a/extra.html
+++ b/extra.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/all.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/updates.css">
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link rel="icon" type="images/x-icon" href="images/logo.png">
@@ -19,7 +19,7 @@
       <li>
           <i class='bx bx-search' ></i>
          <input type="text" placeholder="Search... Disabled" disabled>
-         <span class="tooltip">Search - Disabled here</span>
+         <span class="tooltip">Search - Temporarily Disabled</span>
       </li>
       <li>
         <a href="index.html">
@@ -54,9 +54,57 @@
     </ul>
   </div>
   <section class="home-section">
-      <div class="text">Home</div>
-      <div class="home-area">
+      <div class="text">Updates</div>
+      <div class="updates-area">
         <hr style="border: 2px solid black;">
+        <div class="accordion">
+            <div class="accordion-item">
+              <button class="accordion-header">
+                <strong>Accordion 1</strong><i class="fas fa-angle-down"></i>
+              </button>
+              <div class="accordion-body">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis atque,
+                voluptates minima quod quisquam et quasi debitis officia non illo
+                harum iure eos reprehenderit quaerat, veritatis asperiores facilis qui
+                neque.
+              </div>
+            </div>
+      
+            <div class="accordion-item">
+              <button class="accordion-header">
+                <strong>Accordion 2</strong><i class="fas fa-angle-down"></i>
+              </button>
+              <div class="accordion-body">
+                Dignissimos perspiciatis amet, qui soluta aliquid, ipsa ea alias
+                quidem officiis vel, inventore quod labore aspernatur exercitationem
+                fugit explicabo rerum dolores quo unde assumenda reprehenderit vero
+                temporibus? Magni, nesciunt vero?
+              </div>
+            </div>
+            <div class="accordion-item">
+              <button class="accordion-header">
+                <strong>Accordion 3</strong><i class="fas fa-angle-down"></i>
+              </button>
+              <div class="accordion-body">
+                Amet fuga ipsum velit, quae illo doloremque? Id quidem harum placeat
+                porro ipsam, animi voluptatem vel mollitia, quae rerum suscipit modi
+                at consequatur ipsum vitae cum aspernatur itaque non quam?
+              </div>
+            </div>
+            <div class="accordion-item">
+              <button class="accordion-header">
+                <strong>Accordion 4</strong><i class="fas fa-angle-down"></i>
+              </button>
+              <div class="accordion-body">
+                Nihil consectetur ipsum nobis eligendi facilis sed corrupti, ab fugit
+                ducimus dolorem rem nulla excepturi impedit sint ea, eveniet provident
+                quos repudiandae a quas reiciendis aut, incidunt corporis? Laboriosam,
+                labore.
+              </div>
+            </div>
+          </div>
+      
+          <script src="script.js"></script>
       </div>
   </section>
   <script>
