--- a/Roblox_Studio.html
+++ b/Roblox_Studio.html
@@ -19,7 +19,7 @@
     <ul class="nav-list">
       <li>
           <i class='bx bx-search' ></i>
-         <input type="search" id="search" placeholder="Search... Disabled">
+         <input type="search" id="search" placeholder="Search...">
          <span class="tooltip">Search</span>
       </li>
       <li>
@@ -42,6 +42,20 @@
          <span class="links_name">Updates</span>
        </a>
        <span class="tooltip">Updates</span>
+     </li>
+     <li>
+      <a href="contact-us.html">
+        <i class="fa-solid fa-paper-plane"></i>
+        <span class="links_name">Contact Us</span>
+      </a>
+      <span class="tooltip">Contact Us</span>
+    </li>
+    <li>
+      <a href="#">
+        <i class="fa-solid fa-id-card"></i>
+        <span class="links_name">Hire Me</span>
+      </a>
+      <span class="tooltip">Hire Me</span>
      </li>
      <li class="profile">
          <div class="profile-details">
@@ -72,65 +86,79 @@
             </ul>
           </div>
       </div>
-      <div class="accordion">
-        <div class="accordion-item" id="Pls Donate Map">
-          <button class="accordion-header">
-            <strong>Pls Donate Map</strong><i class="fas fa-angle-down"></i>
-          </button>
-          <div class="accordion-body" style="margin-bottom: 80px;">
-            Description: Time to make a game like pls donate - using my map :D <br>
-            Link: Pls Donate Map <a href="https://www.roblox.com/library/9851588592/Pls-Donate-Map" target="_blank">Get it Now</a>
-          </div>
-        </div>
-        <div class="accordion-item" id="EggHunt Model">
-          <button class="accordion-header">
-            <strong>EggHunt Model</strong><i class="fas fa-angle-down"></i>
-          </button>
-          <div class="accordion-body" style="margin-bottom: 80px;">
-            Description: easter egg event coming soon :o<br>
-            Link: EggHunt Model <a href="https://www.roblox.com/library/9659892467/EggHunt-Model" target="_blank">Get it Now</a>
-          </div>
-        </div>
-        <div class="accordion-item" id="CashDrop System">
-          <button class="accordion-header">
-            <strong>CashDrop System</strong><i class="fas fa-angle-down"></i>
-          </button>
-          <div class="accordion-body" style="margin-bottom: 80px;">
-            Description: Drop some cash boi <br>
-            Link: CashDrop System <a href="https://www.roblox.com/library/9607715790/CashDrop-System" target="_blank">Get it Now</a>
-          </div>
-        </div>
-        <div class="accordion-item" id="Simulator Shop">
-          <button class="accordion-header">
-            <strong>Simulator Shop</strong><i class="fas fa-angle-down"></i>
-          </button>
-          <div class="accordion-body" style="margin-bottom: 80px;">
-            Description: come on sell something<br>
-            Link: Simulator Shop <a href="https://www.roblox.com/library/9116977707/Simulator-Shop-NEW" target="_blank">Get it Now</a>
-          </div>
-        </div>
-        <div class="accordion-item" id="Stand Model">
-          <button class="accordion-header">
-            <strong>Stand Model</strong><i class="fas fa-angle-down"></i>
-          </button>
-          <div class="accordion-body" style="margin-bottom: 80px;">
-            Description: add this to pls donate map!!! <br>
-            Link: Stand Model <a href="https://www.roblox.com/library/9636924007/Stand-Model" target="_blank">Get it Now</a>
-          </div>
-        </div>
-        <div class="accordion-item" id="Realistic Rain System">
-          <button class="accordion-header">
-            <strong>Realistic Rain System</strong><i class="fas fa-angle-down"></i>
-          </button>
-          <div class="accordion-body" style="margin-bottom: 80px;">
-            Description: time to change ur game style <br>
-            Link: Realistic Rain System <a href="https://www.roblox.com/library/11407783743/Realistic-Rain-System" target="_blank">Get it Now</a>
-          </div>
-        </div>
+      <div class="accordion-title">
+        <h1>Models</h1>
       </div>
-        <script src="js/script.js"></script>
-        <script src="js/app.js"></script>
+<div class="accordion">
+  <div class="accordion-item" id="Pls Donate Map">
+    <div class="accordion-item-header">
+      Pls Donate Map
+    </div>
+    <div class="accordion-item-body">
+      <div class="accordion-item-body-content">
+        Description: Time to make a game like pls donate - using my map :D <br>
+        Link: Pls Donate Map <a href="https://www.roblox.com/library/9851588592/Pls-Donate-Map" target="_blank">Get it Now</a>
       </div>
+    </div>
+  </div>
+  <div class="accordion-item" id="EggHunt Model">
+    <div class="accordion-item-header">
+      EggHunt Model
+    </div>
+    <div class="accordion-item-body">
+      <div class="accordion-item-body-content">
+        Description: easter egg event coming soon :o <br>
+        Link: EggHunt Model <a href="https://www.roblox.com/library/9659892467/EggHunt-Model" target="_blank">Get it Now</a>
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item" id="CashDrop System">
+    <div class="accordion-item-header">
+      CashDrop System
+    </div>
+    <div class="accordion-item-body">
+      <div class="accordion-item-body-content">
+        Description: Drop some cash boi <br>
+        Link: CashDrop System <a href="https://www.roblox.com/library/9607715790/CashDrop-System" target="_blank">Get it Now</a>
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item" id="Simulator Shop">
+    <div class="accordion-item-header">
+      Simulator Shop
+    </div>
+    <div class="accordion-item-body">
+      <div class="accordion-item-body-content">
+        Description: come on sell something<br>
+        Link: Simulator Shop <a href="https://www.roblox.com/library/9116977707/Simulator-Shop-NEW" target="_blank">Get it Now</a>
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item" id="Stand Model">
+    <div class="accordion-item-header">
+      Stand Model
+    </div>
+    <div class="accordion-item-body">
+      <div class="accordion-item-body-content">
+        Description: add this to pls donate map!!! <br>
+        Link: Stand Model <a href="https://www.roblox.com/library/9636924007/Stand-Model" target="_blank">Get it Now</a>
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item" id="Realistic Rain System">
+    <div class="accordion-item-header">
+      Realistic Rain System
+    </div>
+    <div class="accordion-item-body" style="margin-bottom: 70px;">
+      <div class="accordion-item-body-content">
+        Description: time to change ur game style <br>
+        Link: Realistic Rain System <a href="https://www.roblox.com/library/11407783743/Realistic-Rain-System" target="_blank">Get it Now</a>
+      </div>
+    </div>
+  </div>
+</div>
+      <script src="js/script.js"></script>
+      <script src="js/app.js"></script>
   </section>
   <script>
   let sidebar = document.querySelector(".sidebar");
