--- a/updates.html
+++ b/updates.html
@@ -36,11 +36,25 @@
        <span class="tooltip">Roblox Studio</span>
      </li>
      <li>
-       <a href="#">
+       <a href="updates.html">
         <i class="fa-solid fa-list-check"></i>
          <span class="links_name">Updates</span>
        </a>
        <span class="tooltip">Updates</span>
+     </li>
+     <li>
+      <a href="contact-us.html">
+        <i class="fa-solid fa-paper-plane"></i>
+        <span class="links_name">Contact Us</span>
+      </a>
+      <span class="tooltip">Contact Us</span>
+    </li>
+    <li>
+      <a href="#">
+        <i class="fa-solid fa-id-card"></i>
+        <span class="links_name">Hire Me</span>
+      </a>
+      <span class="tooltip">Hire Me</span>
      </li>
      <li class="profile">
          <div class="profile-details">
@@ -59,17 +73,27 @@
         <hr style="border: 2px solid black;">
         <div class="updates-area">
             <div class="upd-1">
-                <h1>Update 10/29/2022</h1>
+                <h1>Update 10/30/2022</h1>
                 <ul>
-                    <li style="margin-left: 20px; margin-bottom: 5px;">Added Updates Area</li>
-                    <li style="margin-left: 20px; margin-bottom: 5px;">Search is working in Roblox Studio</li>
-                    <li style="margin-left: 20px; margin-bottom: 5px;">Fixed some bugs</li>
-                    <li style="margin-left: 20px; margin-bottom: 5px;">Changed Roblox Studio page style</li>
-                    <li style="margin-left: 20px; margin-bottom: 5px;">Added some models</li>
-                    <li style="margin-left: 20px; margin-bottom: 5px;">Updates and home page search bar is disabled</li>
-                    <li style="margin-left: 20px; margin-bottom: 5px;">More Coming Soon</li>
+                    <li style="margin-left: 20px; margin-bottom: 5px;">Changed Roblox Studio Style (again)</li>
+                    <li style="margin-left: 20px; margin-bottom: 5px;">Contact Us will be done soon</li>
+                    <li style="margin-left: 20px; margin-bottom: 5px;">Hire Me Area will be here soon!</li>
+                    <li style="margin-left: 20px; margin-bottom: 5px;">fixed bugs</li>
+                    <li style="margin-left: 20px; margin-bottom: 5px;">And More...</li>
                 </ul>
             </div>
+            <div class="upd-1">
+              <h1>Update 10/29/2022</h1>
+              <ul>
+                  <li style="margin-left: 20px; margin-bottom: 5px;">Added Updates Area</li>
+                  <li style="margin-left: 20px; margin-bottom: 5px;">Search is working in Roblox Studio</li>
+                  <li style="margin-left: 20px; margin-bottom: 5px;">Fixed some bugs</li>
+                  <li style="margin-left: 20px; margin-bottom: 5px;">Changed Roblox Studio page style</li>
+                  <li style="margin-left: 20px; margin-bottom: 5px;">Added some models</li>
+                  <li style="margin-left: 20px; margin-bottom: 5px;">Updates and home page search bar is disabled</li>
+                  <li style="margin-left: 20px; margin-bottom: 5px;">More Coming Soon</li>
+              </ul>
+          </div>
         </div>
       </div>
   </section>
