--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
        <span class="tooltip">Updates</span>
      </li>
      <li>
-      <a href="contact-us.html">
+      <a href="#">
         <i class="fa-solid fa-paper-plane"></i>
         <span class="links_name">Contact Us</span>
       </a>
@@ -71,6 +71,7 @@
       <div class="text">Home</div>
       <div class="home-area">
         <hr style="border: 2px solid black;">
+        <h1>Laptops are better suited for this website</h1>
       </div>
   </section>
   <script>
