--- a/updates.html
+++ b/updates.html
@@ -43,7 +43,7 @@
        <span class="tooltip">Updates</span>
      </li>
      <li>
-      <a href="contact-us.html">
+      <a href="#">
         <i class="fa-solid fa-paper-plane"></i>
         <span class="links_name">Contact Us</span>
       </a>
@@ -73,15 +73,26 @@
         <hr style="border: 2px solid black;">
         <div class="updates-area">
             <div class="upd-1">
-                <h1>Update 10/30/2022</h1>
+                <h1>Update 11/2/2022</h1>
                 <ul>
-                    <li style="margin-left: 20px; margin-bottom: 5px;">Changed Roblox Studio Style (again)</li>
-                    <li style="margin-left: 20px; margin-bottom: 5px;">Contact Us will be done soon</li>
-                    <li style="margin-left: 20px; margin-bottom: 5px;">Hire Me Area will be here soon!</li>
-                    <li style="margin-left: 20px; margin-bottom: 5px;">fixed bugs</li>
-                    <li style="margin-left: 20px; margin-bottom: 5px;">And More...</li>
+                    <li style="margin-left: 20px; margin-bottom: 5px;">Added Popularity (<span style="color: crimson; font-weight: bold;">NEW</span>)</li>
+                    <li style="margin-left: 20px; margin-bottom: 5px;">Pls Donate Map have the most Popularity, Thanks 😯</li>
+                    <li style="margin-left: 20px; margin-bottom: 5px;">Something Comings Soon 🤔</li>
+                    <li style="margin-left: 20px; margin-bottom: 5px;">Working on "Contact Us" Area, it will be <span style="color: rgb(0, 149, 255); font-weight: bold;">disabled</span> for a while</li>
+                    <li style="margin-left: 20px; margin-bottom: 5px;">Fixed Bugs</li>
+                    <li style="margin-left: 20px; margin-bottom: 5px;">More Coming Soon!!</li>
                 </ul>
             </div>
+            <div class="upd-1">
+              <h1>Update 10/30/2022</h1>
+              <ul>
+                  <li style="margin-left: 20px; margin-bottom: 5px;">Changed Roblox Studio Style (again)</li>
+                  <li style="margin-left: 20px; margin-bottom: 5px;">Contact Us will be done soon</li>
+                  <li style="margin-left: 20px; margin-bottom: 5px;">Hire Me Area will be here soon!</li>
+                  <li style="margin-left: 20px; margin-bottom: 5px;">fixed bugs</li>
+                  <li style="margin-left: 20px; margin-bottom: 5px;">And More...</li>
+              </ul>
+          </div>
             <div class="upd-1">
               <h1>Update 10/29/2022</h1>
               <ul>
