--- a/Roblox_Studio.html
+++ b/Roblox_Studio.html
@@ -44,7 +44,7 @@
        <span class="tooltip">Updates</span>
      </li>
      <li>
-      <a href="contact-us.html">
+      <a href="#">
         <i class="fa-solid fa-paper-plane"></i>
         <span class="links_name">Contact Us</span>
       </a>
@@ -83,6 +83,8 @@
               <li class="srch-1"><a href="#Simulator Shop">Simulator Shop</a></li>
               <li class="srch-1"><a href="#Stand Model">Stand Model</a></li>
               <li class="srch-1"><a href="#Realistic Rain System">Realistic Rain System</a></li>
+              <li class="srch-1"><a href="#Roblox Doors">Roblox Doors</a></li>
+              <li class="srch-1"><a href="#Cash Shop">Cash Shop</a></li>
             </ul>
           </div>
       </div>
@@ -92,7 +94,7 @@
 <div class="accordion">
   <div class="accordion-item" id="Pls Donate Map">
     <div class="accordion-item-header">
-      Pls Donate Map
+      Pls Donate Map <span><i class="fa-solid fa-fire fa-lg"></i> Most Popular</span>
     </div>
     <div class="accordion-item-body">
       <div class="accordion-item-body-content">
@@ -149,10 +151,41 @@
     <div class="accordion-item-header">
       Realistic Rain System
     </div>
-    <div class="accordion-item-body" style="margin-bottom: 70px;">
+    <div class="accordion-item-body">
       <div class="accordion-item-body-content">
         Description: time to change ur game style <br>
         Link: Realistic Rain System <a href="https://www.roblox.com/library/11407783743/Realistic-Rain-System" target="_blank">Get it Now</a>
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item" id="Cash Shop">
+    <div class="accordion-item-header">
+      Cash Shop <span style="background-color: yellowgreen; margin: -55px 0px 0px 343px;"><i class="fa-solid fa-fire fa-lg"></i> Popular</span>
+    </div>
+    <div class="accordion-item-body">
+      <div class="accordion-item-body-content">
+        Description: buy cash for faster win <br>
+        Link: Cash Shop <a href="https://www.roblox.com/library/8761030946/Cash-Shop" target="_blank">Get it Now</a>
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item" id="Roblox Doors" style="margin-bottom: 70px;">
+    <div class="accordion-item-header">
+      ??? <span style="background-color: darkturquoise; margin: -55px 0px 0px 383.5px;"><i class="fa-solid fa-clock fa-lg"></i> Coming Soon</span>
+    </div>
+    <div class="accordion-item-body">
+      <div class="accordion-item-body-content">
+        <div class="accordion-item" style="margin-bottom: 80px;">
+          <div class="accordion-item-header">
+            ???
+          </div>
+          <div class="accordion-item-body">
+            <div class="accordion-item-body-content">
+              Description: ??? <br>
+              Link: ??? <a href="#" style="text-decoration: none;">No Link Here</a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
