--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <div class="text">Home</div>
       <div class="home-area">
         <hr style="border: 2px solid black;">
-        <h1>Laptops are better suited for this website</h1>
+        <h1>Laptops/Computers are better suited for this website</h1>
       </div>
   </section>
   <script>
