--- a/updates.html
+++ b/updates.html
@@ -73,16 +73,25 @@
         <hr style="border: 2px solid black;">
         <div class="updates-area">
             <div class="upd-1">
-                <h1>Update 11/2/2022</h1>
+                <h1>Update 11/4/2022</h1>
                 <ul>
-                    <li style="margin-left: 20px; margin-bottom: 5px;">Added Popularity (<span style="color: crimson; font-weight: bold;">NEW</span>)</li>
-                    <li style="margin-left: 20px; margin-bottom: 5px;">Pls Donate Map have the most Popularity, Thanks 😯</li>
-                    <li style="margin-left: 20px; margin-bottom: 5px;">Something Comings Soon 🤔</li>
-                    <li style="margin-left: 20px; margin-bottom: 5px;">Working on "Contact Us" Area, it will be <span style="color: rgb(0, 149, 255); font-weight: bold;">disabled</span> for a while</li>
-                    <li style="margin-left: 20px; margin-bottom: 5px;">Fixed Bugs</li>
-                    <li style="margin-left: 20px; margin-bottom: 5px;">More Coming Soon!!</li>
+                    <li style="margin-left: 20px; margin-bottom: 5px;"><span style="color: crimson; font-weight: bolder;">Animated</span> Popularity 😎</li>
+                    <li style="margin-left: 20px; margin-bottom: 5px;">New Model Coming Soon</li>
+                    <li style="margin-left: 20px; margin-bottom: 5px;">I'll be adding some <span style="color: rgb(24, 159, 24); font-weight: bold;">Models</span> without making video on youtube 😔</li>
+                    <li style="margin-left: 20px; margin-bottom: 5px;">Now u can hide <span style="color: rgb(0, 149, 255); font-weight: bolder;">Searchbar</span> 😲</li>
                 </ul>
             </div>
+            <div class="upd-1">
+              <h1>Update 11/2/2022</h1>
+              <ul>
+                  <li style="margin-left: 20px; margin-bottom: 5px;">Added Popularity (<span style="color: crimson; font-weight: bold;">NEW</span>)</li>
+                  <li style="margin-left: 20px; margin-bottom: 5px;">Pls Donate Map have the most Popularity, Thanks 😯</li>
+                  <li style="margin-left: 20px; margin-bottom: 5px;">Something Comings Soon 🤔</li>
+                  <li style="margin-left: 20px; margin-bottom: 5px;">Working on "Contact Us" Area, it will be <span style="color: rgb(0, 149, 255); font-weight: bold;">disabled</span> for a while</li>
+                  <li style="margin-left: 20px; margin-bottom: 5px;">Fixed Bugs</li>
+                  <li style="margin-left: 20px; margin-bottom: 5px;">More Coming Soon!!</li>
+              </ul>
+          </div>
             <div class="upd-1">
               <h1>Update 10/30/2022</h1>
               <ul>
