--- a/Roblox_Studio.html
+++ b/Roblox_Studio.html
@@ -75,6 +75,9 @@
         <div class="title-container"> 
           <!-- <h1> Contacts List <h1> -->
         </div>
+        <div class="listbtn">
+          <button onclick="toggle()">Show/Hide List</button>
+        </div>
           <div id="contacts-list" class="searching-area">
             <ul> 
               <li class="srch-1"><a href="#Pls Donate Map">Pls Donate Map</a></li>
@@ -85,6 +88,7 @@
               <li class="srch-1"><a href="#Realistic Rain System">Realistic Rain System</a></li>
               <li class="srch-1"><a href="#Roblox Doors">Roblox Doors</a></li>
               <li class="srch-1"><a href="#Cash Shop">Cash Shop</a></li>
+              <li class="srch-1"><a href="#Cash Shop">Daily Spin</a></li>
             </ul>
           </div>
       </div>
@@ -94,7 +98,7 @@
 <div class="accordion">
   <div class="accordion-item" id="Pls Donate Map">
     <div class="accordion-item-header">
-      Pls Donate Map <span><i class="fa-solid fa-fire fa-lg"></i> Most Popular</span>
+      Pls Donate Map <span class="fa-bounce"><i class="fa-solid fa-fire fa-lg"></i> Most Popular</span>
     </div>
     <div class="accordion-item-body">
       <div class="accordion-item-body-content">
@@ -160,7 +164,7 @@
   </div>
   <div class="accordion-item" id="Cash Shop">
     <div class="accordion-item-header">
-      Cash Shop <span style="background-color: yellowgreen; margin: -55px 0px 0px 343px;"><i class="fa-solid fa-fire fa-lg"></i> Popular</span>
+      Cash Shop <span style="background-color: yellowgreen; margin: -55px 0px 0px 340px;"><i class="fa-solid fa-fire fa-lg"></i> Popular</span>
     </div>
     <div class="accordion-item-body">
       <div class="accordion-item-body-content">
@@ -169,20 +173,31 @@
       </div>
     </div>
   </div>
+  <div class="accordion-item" id="Daily Spin">
+    <div class="accordion-item-header">
+      Daily Spin
+    </div>
+    <div class="accordion-item-body">
+      <div class="accordion-item-body-content">
+        Description: Time to get free money 🤑 (Spin & Win) <br>
+        Link: Daily Spin <a href="https://www.roblox.com/library/11447412050/Daily-Spin" target="_blank">Get it Now</a>
+      </div>
+    </div>
+  </div>
   <div class="accordion-item" id="Roblox Doors" style="margin-bottom: 70px;">
     <div class="accordion-item-header">
-      ??? <span style="background-color: darkturquoise; margin: -55px 0px 0px 383.5px;"><i class="fa-solid fa-clock fa-lg"></i> Coming Soon</span>
+      Roblox Doors
     </div>
     <div class="accordion-item-body">
       <div class="accordion-item-body-content">
         <div class="accordion-item" style="margin-bottom: 80px;">
           <div class="accordion-item-header">
-            ???
+            Doors Lobby
           </div>
           <div class="accordion-item-body">
             <div class="accordion-item-body-content">
-              Description: ??? <br>
-              Link: ??? <a href="#" style="text-decoration: none;">No Link Here</a>
+              Description: Time to make a game like doors <br>
+              Link: Doors Lobby <a href="#" style="text-decoration: none;">???</a>
             </div>
           </div>
         </div>
@@ -203,7 +218,7 @@
     menuBtnChange();//calling the function(optional)
   });
 
-  searchBtn.addEventListener("click", ()=>{ // Sidebar open when you click on the search iocn
+  searchBtn.addEventListener("click", ()=>{ // Sidebar open when you click on the search icon
     sidebar.classList.toggle("open");
     menuBtnChange(); //calling the function(optional)
   });
@@ -211,11 +226,24 @@
   // following are the code to change sidebar button(optional)
   function menuBtnChange() {
    if(sidebar.classList.contains("open")){
-     closeBtn.classList.replace("bx-menu", "bx-menu-alt-right");//replacing the iocns class
+     closeBtn.classList.replace("bx-menu", "bx-menu-alt-right");//replacing the icons class
    }else {
-     closeBtn.classList.replace("bx-menu-alt-right","bx-menu");//replacing the iocns class
+     closeBtn.classList.replace("bx-menu-alt-right","bx-menu");//replacing the icons class
    }
   }
+  </script>
+  <script>
+    function toggle() {
+      var x = document.getElementById("contacts-list");
+
+      if(x.style.display === "none") {
+        x.style.display = "block";
+      }
+
+      else {
+        x.style.display = "none";
+      }
+    }
   </script>
 </body>
 </html>
