--- a/Roblox_Studio.html
+++ b/Roblox_Studio.html
@@ -89,6 +89,7 @@
               <li class="srch-1"><a href="#Roblox Doors">Roblox Doors</a></li>
               <li class="srch-1"><a href="#Cash Shop">Cash Shop</a></li>
               <li class="srch-1"><a href="#Cash Shop">Daily Spin</a></li>
+              <li class="srch-1"><a href="#Building System">Building System</a></li>
             </ul>
           </div>
       </div>
@@ -184,7 +185,7 @@
       </div>
     </div>
   </div>
-  <div class="accordion-item" id="Roblox Doors" style="margin-bottom: 70px;">
+  <div class="accordion-item" id="Roblox Doors">
     <div class="accordion-item-header">
       Roblox Doors
     </div>
@@ -197,10 +198,21 @@
           <div class="accordion-item-body">
             <div class="accordion-item-body-content">
               Description: Time to make a game like doors <br>
-              Link: Doors Lobby <a href="#" style="text-decoration: none;">???</a>
+              Link: Doors Lobby <a href="https://www.roblox.com/library/11522149756/Roblox-Doors" target="_blank" style="text-decoration: none;">Get it Now</a>
             </div>
           </div>
         </div>
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item" id="Building System" style="margin-bottom: 70px;">
+    <div class="accordion-item-header">
+      Building System
+    </div>
+    <div class="accordion-item-body">
+      <div class="accordion-item-body-content">
+        Description: Time to build my own building <br>
+        Link: Building System <a href="https://www.roblox.com/library/11464518329/Building-System" target="_blank">Get it Now</a>
       </div>
     </div>
   </div>
