--- a/courses.html
+++ b/courses.html
@@ -4,15 +4,13 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Home</title>
+   <title>courses</title>
 
    <!-- font awesome cdn link  -->
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
 
    <!-- custom css file link  -->
-   <link rel="stylesheet" href="css/all.min.css">
    <link rel="stylesheet" href="css/style.css">
-   <link rel="icon" type="images/x-icon" href="images/logo.png">
 
 </head>
 <body>
@@ -23,7 +21,7 @@
 
       <a href="index.html" class="logo">Dark_Studio</a>
 
-      <form class="search-form">
+      <form action="search.html" method="post" class="search-form">
          <input type="text" name="search_box" required placeholder="search courses..." maxlength="100">
          <button type="submit" class="fas fa-search"></button>
       </form>
@@ -32,23 +30,23 @@
          <div id="menu-btn" class="fas fa-bars"></div>
          <div id="search-btn" class="fas fa-search"></div>
          <div id="user-btn" class="fas fa-user"></div>
-         <!-- <div id="toggle-btn" class="fas fa-sun"></div> -->
+         <!-- <!-- <div id="toggle-btn" class="fas fa-sun"></div> --> -->
       </div>
 
       <div class="profile">
          <img src="images/unnamed (3).jpg" class="image" alt="">
          <h3 class="name">AMMARUDES123</h3>
          <p class="role">Owner</p>
-         <a href="profile.html" class="btn">view owner</a>
-         <!-- <div class="flex-btn">
+         <a href="profile.html" class="btn">view profile</a>
+         <div class="flex-btn">
             <a href="login.html" class="option-btn">login</a>
             <a href="register.html" class="option-btn">register</a>
-         </div> -->
+         </div>
       </div>
 
    </section>
 
-</header>
+</header>   
 
 <div class="side-bar">
 
@@ -57,71 +55,23 @@
    </div>
 
    <div class="profile">
-      <a href="profile.html" class="btn">view owner</a>
+      <img src="images/unnamed (3).jpg" class="image" alt="">
+      <h3 class="name">AMMARUDES123</h3>
+      <p class="role">Owner</p>
+      <a href="profile.html" class="btn">view profile</a>
    </div>
-   
+
    <nav class="navbar">
       <a href="index.html"><i class="fas fa-home"></i><span>Home</span></a>
       <a href="RobloxStudio.html"><i class="fa-solid fa-folder-closed"></i><span>Roblox Studio</span></a>
-      <!-- <a href="update.html"><i class="fa-regular fa-calendar-check"></i><span>Updates</span></a> -->
+      <a href="update.html"><i class="fa-regular fa-calendar-check"></i><span>Updates</span></a>
             <!-- <a href="teachers.html"><i class="fas fa-chalkboard-user"></i><span>teachers</span></a>
       <a href="contact.html"><i class="fas fa-headset"></i><span>contact us</span></a> -->
    </nav>
 
 </div>
 
-<section class="home-grid">
-
-   <h1 class="heading">quick options</h1>
-
-   <div class="box-container">
-
-      <!-- <div class="box">
-         <h3 class="title">likes and comments</h3>
-         <p class="likes">total likes : <span>25</span></p>
-         <a href="#" class="inline-btn">view likes</a>
-         <p class="likes">total comments : <span>12</span></p>
-         <a href="#" class="inline-btn">view comments</a>
-         <p class="likes">saved playlists : <span>4</span></p>
-         <a href="#" class="inline-btn">view playlists</a>
-      </div> -->
-
-      <div class="box">
-         <h3 class="title">model ideas</h3>
-         <div class="flex">
-            <h3 class="title">None</h3>
-            <!-- <a href="#"><i class="fas fa-code"></i><span>development</span></a>
-            <a href="#"><i class="fas fa-chart-simple"></i><span>business</span></a>
-            <a href="#"><i class="fas fa-pen"></i><span>design</span></a>
-            <a href="#"><i class="fas fa-chart-line"></i><span>marketing</span></a>
-            <a href="#"><i class="fas fa-music"></i><span>music</span></a>
-            <a href="#"><i class="fas fa-camera"></i><span>photography</span></a>
-            <a href="#"><i class="fas fa-cog"></i><span>software</span></a>
-            <a href="#"><i class="fas fa-vial"></i><span>science</span></a> -->
-         </div>
-      </div>
-
-      <div class="box">
-         <h3 class="title">popular models</h3>
-         <div class="flex">
-            <a href="#"><i class="fa-solid fa-circle-check"></i><span>Pls Donate Map</span></a>
-            <a href="#"><i class="fa-solid fa-circle-check"></i><span>Cash Shop</span></a>
-         </div>
-      </div>
-
-      <!-- <div class="box">
-         <h3 class="title">become a tutor</h3>
-         <p class="tutor">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis, nam?</p>
-         <a href="teachers.html" class="inline-btn">get started</a>
-      </div> -->
-
-   </div>
-
-</section>
-
-
-
-<!-- <section class="courses">
+<section class="courses">
 
    <h1 class="heading">our courses</h1>
 
@@ -223,13 +173,57 @@
          <a href="playlist.html" class="inline-btn">view playlist</a>
       </div>
 
+      <div class="box">
+         <div class="tutor">
+            <img src="images/pic-8.jpg" alt="">
+            <div class="info">
+               <h3>john deo</h3>
+               <span>21-10-2022</span>
+            </div>
+         </div>
+         <div class="thumb">
+            <img src="images/thumb-7.png" alt="">
+            <span>10 videos</span>
+         </div>
+         <h3 class="title">complete PHP tutorial</h3>
+         <a href="playlist.html" class="inline-btn">view playlist</a>
+      </div>
+
+      <div class="box">
+         <div class="tutor">
+            <img src="images/pic-9.jpg" alt="">
+            <div class="info">
+               <h3>john deo</h3>
+               <span>21-10-2022</span>
+            </div>
+         </div>
+         <div class="thumb">
+            <img src="images/thumb-8.png" alt="">
+            <span>10 videos</span>
+         </div>
+         <h3 class="title">complete MySQL tutorial</h3>
+         <a href="playlist.html" class="inline-btn">view playlist</a>
+      </div>
+
+      <div class="box">
+         <div class="tutor">
+            <img src="images/unnamed (3).jpg" alt="">
+            <div class="info">
+               <h3>john deo</h3>
+               <span>21-10-2022</span>
+            </div>
+         </div>
+         <div class="thumb">
+            <img src="images/thumb-9.png" alt="">
+            <span>10 videos</span>
+         </div>
+         <h3 class="title">complete react tutorial</h3>
+         <a href="playlist.html" class="inline-btn">view playlist</a>
+      </div>
+
    </div>
 
-   <div class="more-btn">
-      <a href="update.html" class="inline-option-btn">view all courses</a>
-   </div>
-
-</section> -->
+</section>
 
 
 
@@ -244,12 +238,11 @@
 
 
 
-
-<!-- <footer class="footer">
+<footer class="footer">
 
    &copy; copyright @ 2022 by <span>AMMARUDES123</span> | all rights reserved!
 
-</footer> -->
+</footer>
 
 <!-- custom js file link  -->
 <script src="js/script.js"></script>
